tester/testsuite/bad/shadowedfunction.jl
void func() {
    printString("I'm here!");
}

int main() {

    int func = 0;
    
    func();

    return 0;
}